salesforce/force-app/main/default/objects/Agent_Audit_Session__c/Agent_Audit_Session__c.object-meta.xml
<CustomObject>
    <description>Represents a sealed audit session from AgentLedger. Contains the Merkle root and session metadata for an AI agent operation.</description>
    <label>Agent Audit Session</label>
    <nameField>
        <displayFormat>AAS-{0000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Audit Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>