salesforce/force-app/main/default/objects/Agent_Audit_Session__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>When the agent session was sealed</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>