salesforce/force-app/main/default/objects/Agent_Audit_Session__c/fields/Initiator__c.field-meta.xml
<CustomField>
    <fullName>Initiator__c</fullName>
    <description>Who or what initiated this agent session</description>
    <label>Initiator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>