salesforce/force-app/main/default/objects/Agent_Audit_Session__c/fields/Merkle_Root__c.field-meta.xml
<CustomField>
    <fullName>Merkle_Root__c</fullName>
    <description>SHA-256 Merkle root hash computed from all Action Records in this session</description>
    <label>Merkle Root</label>
    <length>64</length>
    <type>Text</type>
</CustomField>