salesforce/force-app/main/default/objects/Agent_Audit_Session__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Platform identifier (e.g., salesforce, agentforce)</description>
    <label>Platform</label>
    <length>100</length>
    <type>Text</type>
</CustomField>