salesforce/force-app/main/default/objects/Agent_Audit_Session__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Salesforce record Id that this audit session is associated with (e.g., an Opportunity, Account, or Case)</description>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>