salesforce/force-app/main/default/objects/Agent_Audit_Session__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Unique identifier for this audit session (UUID)</description>
    <externalId>true</externalId>
    <label>Session ID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>