salesforce/force-app/main/default/objects/Agent_Audit_Session__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>When the agent session started</description>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>